<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        android:padding="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:text="@string/cases"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_medical_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintHeight_default="wrap"
        app:reverseLayout="false"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"

        />

    <EditText
        android:id="@+id/edit_measurement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/cairo_semibold"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:hint="@string/add_measurement"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/rounded_gray_strock"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toBottomOf="@+id/recycler_medical_record" />

    <ImageView
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:src="@drawable/ic_gray_add"
        app:layout_constraintBottom_toBottomOf="@+id/edit_measurement"
        app:layout_constraintEnd_toEndOf="@+id/edit_measurement"
        app:layout_constraintTop_toTopOf="@+id/edit_measurement" />

    <TextView
        android:id="@+id/edit_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/edit_shape_trans"
        android:text="@string/select_analysis_employee"
        android:maxLines="1"
        android:textColor="@color/dark_gray"
        android:padding="@dimen/_12ssp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/edit_measurement"
        app:drawableEndCompat="@drawable/ic_arrow_right" />


    <EditText
        android:id="@+id/edit_note_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/back_groud_gray"
        android:hint="@string/note"
        android:textColor="@color/black"
        android:padding="@dimen/_12ssp"
        android:textSize="@dimen/_12ssp"
        android:gravity="top"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@+id/edit_doctor"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairo_bold"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/send"
        android:textSize="@dimen/_13ssp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>